# pytest-enhanced-reports

./: LICENSE.txt  README.md  pyproject.toml
src/: dev-reqs.txt  setup.py
src/enhanced_reports/: browser_console_manager.py  common_utils.py  config.py  core.py  screenshot_manager.py  video_manager.py
src/enhanced_reports/report_libs/: allure_pytest_bdd.py  pytest-testrail-client.py
test-site/: index.html  page2.html  style.css
tests/: conftest.py  properties.py  reinstallAndRun.sh  run.sh  test-reqs-latest.txt  test-reqs.txt  test_data.ini
tests/data/js_logs/always/: 1.txt  2.txt
tests/data/js_logs/each_ui_operation/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
tests/data/js_logs/end_of_each_test/: attachment.txt
tests/data/js_logs/failed_test_only/: attachment.txt
tests/features/: test_site.feature
tests/normal_tests/: test_run_all_tests.py
tests/plugin_tests/: test_js_logs.py  test_screenshots.py
tests/step_defs/: shared_steps.py
tests/util/: util.py
